--- a/packages/bitcore-node/package.json
+++ b/packages/bitcore-node/package.json
@@ -81,10 +81,10 @@
     "bitcore-client": "^8.8.1",
     "bitcore-lib": "^8.8.1",
     "bitcore-lib-cash": "^8.8.1",
-    "bitcore-lib-peercoin": "8.7.3",
+    "bitcore-lib-peercoin": "^8.8.1",
     "bitcore-p2p": "^8.8.1",
     "bitcore-p2p-cash": "^8.8.1",
-    "bitcore-p2p-peercoin": "8.7.3",
+    "bitcore-p2p-peercoin": "^8.7.3",
     "bitcore-wallet-client": "^8.8.1",
     "body-parser": "1.18.3",
     "cors": "2.8.4",
